<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gectaurus.calculatordam.MainActivity" >

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="33dp"
        android:layout_toLeftOf="@+id/button13"
        android:columnCount="4"
        android:rowCount="4" >

        <Button
            android:id="@+id/button1"
            android:layout_gravity="left"
            android:text="@string/Number7" />

        <Button
            android:id="@+id/button2"
            android:layout_gravity="left"
            android:text="@string/Number8" />

        <Button
            android:id="@+id/button3"
            android:layout_gravity="left"
            android:text="@string/Number9" />

        <Button
            android:id="@+id/button8"
            android:layout_column="3"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="1"
            android:text="@string/Symbolmultiply" />

        <Button
            android:id="@+id/button9"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/Number3" />

        <Button
            android:id="@+id/Button02"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/Number0" />

        <Button
            android:id="@+id/Button04"
            android:layout_column="3"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="3"
            android:text="@string/Symboladd" />

        <Button
            android:id="@+id/Button03"
            android:layout_width="wrap_content"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/Delete" />

        <Button
            android:id="@+id/button12"
            android:layout_column="3"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="2"
            android:text="@string/Symbolsubtract" />

        <Button
            android:id="@+id/button10"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/Number2" />

        <Button
            android:id="@+id/Button01"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/Symboldot" />

        <Button
            android:id="@+id/button11"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/Number1" />

        <Button
            android:id="@+id/button4"
            android:layout_column="3"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:text="@string/Symboldivide" />

        <Button
            android:id="@+id/button5"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/Number6" />

        <Button
            android:id="@+id/button6"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/Number5" />

        <Button
            android:id="@+id/button7"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/Number4" />

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="346dp"
            android:layout_height="106dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="number"
            android:textSize="40sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="193dp"
        android:layout_alignBottom="@+id/gridLayout1"
        android:layout_alignParentRight="true"
        android:text="@string/Symbolequal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button13"
        android:layout_alignLeft="@+id/gridLayout1"
        android:layout_marginBottom="46dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="346dp"
            android:layout_height="106dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="number"
            android:textSize="40sp" />

    </LinearLayout>

</RelativeLayout>